fix link training

--- a/views/training-list.ejs
+++ b/views/training-list.ejs
@@ -89,7 +89,7 @@
                               <% } else { %>
                                 <button class="btn btn-success btn-sm mr-1" type="button"><i class="fas fa-check"></i>Đã đăng ký tham gia</button>
                               <% } } catch (e) { %>
-                                <form action="/login" method="GET" style="display: inline;" class="modiItem">
+                                <form action="/users/login" method="GET" style="display: inline;" class="modiItem">
                                   <button class="btn btn-outline-success btn-sm mr-1" type="submit">Đăng ký tham gia</button>
                                 </form>
                               <% } %>
